# tele-neuron-engine

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  ipad_lab.html  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
Vanila_learner/Algorithm/: bayesian_optimization.py  differentiable_physics_approximation.py  evolution_strategy.py  genetic_algorithm.py  hill_climbing.py  linear_regression.py  logistic_regression.py  novelity_search.py  novelty_search.py  random_search.py
configs/: and_tiny.json  or_tiny.json  xor_first_model.json  xor_tiny.json
docs/: experiment_design.md
models/: tele_neuron_001.json
src/tele_neuron/: __init__.py  ball.py  collision.py  config.py  config_lab.py  experiment.py  input_encoder.py  learner.py  learner_lab.py  model.py  physics.py  readout.py  space.py  trainer.py  visualize.py
src/tele_neuron/config_lab_static/: index.html
src/tele_neuron/learner_lab_static/: index.html
tests/: test_ball.py  test_collision.py  test_config.py  test_config_lab.py  test_determinism.py  test_learner.py  test_learner_lab.py  test_multi_readout.py  test_physics.py  test_readout.py  test_trainer.py
