[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tele-neuron-engine"
version = "0.1.0"
description = "Phase 1 single-PC Tele-Neuron physical reservoir prototype."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tele_neuron = ["config_lab_static/index.html", "learner_lab_static/index.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
